ai-ml/jark-stack/terraform/extra/raycluster-gpu.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fsi-ray
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsi-ray-dashboard
  namespace: fsi-ray
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /fsi-ray/dashboard/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: fsi-ray-head-svc
              port:
                number: 8265
